# moveOverlay-rust

./: .gitignore  Cargo.toml  README.md  debug_env.bat  run.bat
src/: chess_logic.rs  config.rs  engine.rs  main.rs  yolo.rs
src/capture/: grabber.rs
src/engine/: mod.rs  stockfish.rs
src/overlay/: window.rs
src/vision/: board.rs  inference.rs  mod.rs
