[package]
name = "redo-man"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

# GPU Inference - Using CUDA for maximum speed on RTX 3050
ort = { version = "2.0.0-rc.11", features = ["cuda"] }
ndarray = "0.17"

# Screen Capture & Image
screenshots = "0.8"
image = "0.24"

# GUI & Overlay
eframe = { version = "0.28", features = ["persistence"] }
egui = "0.28"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct2D",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse"
]}

# Hotkeys
rdev = "0.5"

# Chess Logic
shakmaty = "0.27"

# Log
log = "0.4"
env_logger = "0.11"
